tests/bad_programs/semantic_errors/overloading.notc
// No allowed

void fun() {
}

int fun(double x) { 
    return 1; }

int main() {
    return 0;
}
